<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rearn - Instagram Reels Scraper</string>
    <string name="keywords_hint">Enter keywords (comma separated)</string>
    <string name="min_views_hint">Minimum views</string>
    <string name="min_likes_hint">Minimum likes</string>
    <string name="webhook_url_hint">Webhook URL</string>
    <string name="start_button">Start Scraping</string>
    <string name="stop_button">Stop Scraping</string>
    <string name="service_description">Instagram Reels Scraper Service</string>
    <string name="enable_accessibility">Enable Accessibility Service</string>
    <string name="accessibility_instructions">Please enable the accessibility service in Settings to use this app.</string>
    <string name="status_idle">Status: Idle</string>
    <string name="status_running">Status: Running</string>
    <string name="status_stopped">Status: Stopped</string>
    <string name="reels_found">Reels found: %d</string>
</resources>
